--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://drausseo:mUN1XOEA7AG4a7I9@cse341.3rqxdaw.mongodb.net/mydb?retryWrites=true&w=majority&appName=CSE341
-
+MONGODB_URI=your_mongodb_connection_string_here
